--- a/residential.html
+++ b/residential.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Best Home Interior Designers in Hyderabad Telangana - Leaspace Studio</title>
+    <title>SR-Interiors</title>
     <meta name="description" content="Discover Leaspace Studio, one of the best home interior designers in Hyderabad, Telangana, offering stunning and personalized interior designs for modern living spaces.">
           <meta name="description" content="Best Home Interior Design Company in Hyderabad">
     <link
@@ -99,7 +99,7 @@
       </li>
               <li class="nav-item nav-list">
                 <a class="nav-link" href="portfolio.html">Portfolio</a>
-              </li  <li class="nav-item nav-list">
+               <li class="nav-item nav-list">
                
   <li class="nav-item nav-list">
                 <a class="nav-link" href="blog.html">Blog</a>
