--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
               </svg>About Us</h6>
                 <h1>Discover the art of interior transformation
                 </h1>
-                <p>Here at La’espace, we create spaces that evoke magic through the use of color, pattern, and storytelling.  Our approach is collaborative and hands-on, we listen and love to create a space that truly reflects your life and lifestyle.
+                <p>SR Interiors is a leading interior design firm committed to transforming spaces into stunning and functional environments. With a focus on innovative design solutions and meticulous attention to detail, we specialize in creating personalized interiors that reflect our clients' unique styles and preferences. 
                 </p>
               </div>
 
@@ -411,7 +411,7 @@
                   <div class="side front">
                     <div class="front-content">
                       <img src="assets/images/about/i5.webp" class="service-icon">
-                   <a href="turnkey-projects.html"><h4 class="service-name">Turnkey Projects
+                   <a href="turnkey-projects.html"><h4 class="service-name">Ceiling
                     </h4></a>
                     <p class="service-para">Our turnkey contracting service assures you of uncompromised quality every step of the way and removes any disconnect between the design and execution teams.
                     </p>
