--- a/s.html
+++ b/s.html
@@ -3,170 +3,134 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Carousel</title>
+    <title>Image Gallery</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1 class="main-heading">Image Gallery</h1>
+        <h2 class="sub-heading">Scroll Through Amazing Pictures</h2>
+        <div class="image-gallery">
+            <button id="prevButton" class="nav-button">◀</button>
+            <div class="image-container" id="imageContainer">
+                <div class="images-wrapper">
+                    <img src="images/design-img3.jpg" alt="Image 1" class="gallery-image">
+                    <img src="images/living-room-2155376_1920.jpg" alt="Image 2" class="gallery-image">
+                    <img src="images/design-img3.jpg" alt="Image 3" class="gallery-image">
+                    <img src="images/living-room-2155376_1920.jpg" alt="Image 4" class="gallery-image">
+                    <img src="images/design-img3.jpg" alt="Image 5" class="gallery-image">
+                    <img src="images/living-room-2155376_1920.jpg" alt="Image 6" class="gallery-image">
+                    <img src="images/design-img3.jpg" alt="Image 7" class="gallery-image">
+                </div>
+            </div>
+            <button id="nextButton" class="nav-button">▶</button>
+        </div>
+    </div>
+
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 20px;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: auto;
             text-align: center;
-            background-color: #f0f0f0;
         }
-        h1 {
-            font-size: 2.5rem;
-            margin-top: 20px;
+
+        .main-heading {
+            margin-bottom: 10px;
         }
-        h2 {
-            font-size: 1.5rem;
-            color: #555;
+
+        .sub-heading {
             margin-bottom: 20px;
+            color: #555;
         }
-        .carousel-container {
-            position: relative;
-            width: 80%;
-            margin: 0 auto;
-            overflow: hidden;
-        }
-        .carousel {
+
+        .image-gallery {
             display: flex;
-            transition: transform 0.5s ease-in-out;
+            align-items: center;
+            justify-content: center; /* Center align buttons */
         }
-        .carousel img {
-            width: 300px;
-            height: 200px;
-            margin: 0 10px;
-            cursor: pointer;
+
+        .image-container {
+            overflow: hidden;
+            width: 80%; /* Adjust width to fit your layout */
+            position: relative;
         }
-        .left, .right {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            background-color: rgba(0, 0, 0, 0.5);
+
+        .images-wrapper {
+            display: flex;
+            transition: transform 0.5s ease; /* Smooth transition */
+        }
+
+        .gallery-image {
+            width: calc(33.33% - 10px); /* Adjust for margin */
+            height: auto;
+            flex-shrink: 0; /* Prevent images from shrinking */
+            margin: 5px; /* Add space between images */
+        }
+
+        .nav-button {
+            background-color: #007bff;
             color: white;
-            font-size: 2rem;
+            border: none;
             padding: 10px;
             cursor: pointer;
+            transition: background-color 0.3s;
         }
-        .left { left: 0; }
-        .right { right: 0; }
-        /* Fullscreen zoom */
-        .fullscreen {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.9);
-            z-index: 9999;
-            justify-content: center;
-            align-items: center;
+
+        .nav-button:hover {
+            background-color: #0056b3;
         }
-        .fullscreen img {
-            width: 80%;
-            height: auto;
-        }
-        .fullscreen .left, .fullscreen .right {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            font-size: 3rem;
-        }
-        .fullscreen .left { left: 20px; }
-        .fullscreen .right { right: 20px; }
-        .fullscreen .close {
-            position: absolute;
-            top: 20px;
-            right: 30px;
-            font-size: 2rem;
-            color: white;
-            cursor: pointer;
-        }
+        .gallery-image {
+    width: calc(33.33% - 10px); /* Adjust for margin */
+    height: auto;
+    flex-shrink: 0; /* Prevent images from shrinking */
+    margin: 5px; /* Add space between images */
+}
+
     </style>
-</head>
-<body>
-
-    <h1>Main Heading</h1>
-    <h2>Subheading</h2>
-
-    <div class="carousel-container">
-        <span class="left" onclick="scrollLeft()">&#10094;</span>
-        <div class="carousel">
-            <img src="https://via.placeholder.com/300x200?text=Image+1" alt="Image 1" onclick="zoomImage(this)">
-            <img src="https://via.placeholder.com/300x200?text=Image+2" alt="Image 2" onclick="zoomImage(this)">
-            <img src="https://via.placeholder.com/300x200?text=Image+3" alt="Image 3" onclick="zoomImage(this)">
-            <img src="https://via.placeholder.com/300x200?text=Image+4" alt="Image 4" onclick="zoomImage(this)">
-            <img src="https://via.placeholder.com/300x200?text=Image+5" alt="Image 5" onclick="zoomImage(this)">
-            <img src="https://via.placeholder.com/300x200?text=Image+1" alt="Image 1" onclick="zoomImage(this)">
-            <img src="https://via.placeholder.com/300x200?text=Image+2" alt="Image 2" onclick="zoomImage(this)">
-            <img src="https://via.placeholder.com/300x200?text=Image+3" alt="Image 3" onclick="zoomImage(this)">
-            <img src="https://via.placeholder.com/300x200?text=Image+4" alt="Image 4" onclick="zoomImage(this)">
-            <img src="https://via.placeholder.com/300x200?text=Image+5" alt="Image 5" onclick="zoomImage(this)">
-        </div>
-        <span class="right" onclick="scrollRight()">&#10095;</span>
-    </div>
-
-    <!-- Fullscreen Zoom Modal -->
-    <div id="fullscreen" class="fullscreen" onclick="closeFullscreen()">
-        <span class="close">&times;</span>
-        <span class="left" onclick="prevZoomImage(event)">&#10094;</span>
-        <img id="zoomedImage" src="" alt="Zoomed Image">
-        <span class="right" onclick="nextZoomImage(event)">&#10095;</span>
-    </div>
-
     <script>
-        let currentIndex = 0;
-        const carousel = document.querySelector('.carousel');
-        const images = document.querySelectorAll('.carousel img');
+        const imageContainer = document.getElementById('imageContainer');
+        const imagesWrapper = document.querySelector('.images-wrapper');
+        const images = document.querySelectorAll('.gallery-image');
         const totalImages = images.length;
+        let currentIndex = 0;
 
-        function updateCarousel() {
-            const offset = currentIndex * -320; // Image width + margin
-            carousel.style.transform = `translateX(${offset}px)`;
+        // Function to update image display
+        function updateImages() {
+            // Calculate the width of the container
+            const slideWidth = 100 / 3; // 3 images shown at a time
+            imagesWrapper.style.transform = `translateX(-${currentIndex * slideWidth}%)`;
         }
 
-        function scrollRight() {
-            if (currentIndex < totalImages - 3) { // Show only 3 images at a time
-                currentIndex++;
-            } else {
-                currentIndex = 0;
+        // Navigation functions
+        function showNextImages() {
+            currentIndex += 1;
+            if (currentIndex > totalImages - 3) {
+                currentIndex = 0; // Loop back to the beginning
             }
-            updateCarousel();
+            updateImages();
         }
 
-        function scrollLeft() {
-            if (currentIndex > 0) {
-                currentIndex--;
-            } else {
-                currentIndex = totalImages - 3;
+        function showPrevImages() {
+            currentIndex -= 1;
+            if (currentIndex < 0) {
+                currentIndex = totalImages - 3; // Loop back to the end
             }
-            updateCarousel();
+            updateImages();
         }
 
-        function zoomImage(img) {
-            const fullscreen = document.getElementById('fullscreen');
-            const zoomedImage = document.getElementById('zoomedImage');
-            fullscreen.style.display = 'flex';
-            zoomedImage.src = img.src;
-            currentIndex = Array.from(images).indexOf(img);
-        }
+        // Event listeners for buttons
+        document.getElementById('nextButton').addEventListener('click', showNextImages);
+        document.getElementById('prevButton').addEventListener('click', showPrevImages);
 
-        function closeFullscreen() {
-            const fullscreen = document.getElementById('fullscreen');
-            fullscreen.style.display = 'none';
-        }
-
-        function prevZoomImage(event) {
-            event.stopPropagation();
-            currentIndex = (currentIndex === 0) ? totalImages - 1 : currentIndex - 1;
-            const zoomedImage = document.getElementById('zoomedImage');
-            zoomedImage.src = images[currentIndex].src;
-        }
-
-        function nextZoomImage(event) {
-            event.stopPropagation();
-            currentIndex = (currentIndex === totalImages - 1) ? 0 : currentIndex + 1;
-            const zoomedImage = document.getElementById('zoomedImage');
-            zoomedImage.src = images[currentIndex].src;
-        }
+        // Automatic scrolling every 3 seconds
+        setInterval(showNextImages, 3000);
     </script>
 </body>
 </html>
