--- a/s.html
+++ b/s.html
@@ -4,29 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Gallery</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="container">
-        <h1 class="main-heading">Image Gallery</h1>
-        <h2 class="sub-heading">Scroll Through Amazing Pictures</h2>
-        <div class="image-gallery">
-            <button id="prevButton" class="nav-button">◀</button>
-            <div class="image-container" id="imageContainer">
-                <div class="images-wrapper">
-                    <img src="images/design-img3.jpg" alt="Image 1" class="gallery-image">
-                    <img src="images/living-room-2155376_1920.jpg" alt="Image 2" class="gallery-image">
-                    <img src="images/design-img3.jpg" alt="Image 3" class="gallery-image">
-                    <img src="images/living-room-2155376_1920.jpg" alt="Image 4" class="gallery-image">
-                    <img src="images/design-img3.jpg" alt="Image 5" class="gallery-image">
-                    <img src="images/living-room-2155376_1920.jpg" alt="Image 6" class="gallery-image">
-                    <img src="images/design-img3.jpg" alt="Image 7" class="gallery-image">
-                </div>
-            </div>
-            <button id="nextButton" class="nav-button">▶</button>
-        </div>
-    </div>
-
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -36,7 +13,7 @@
         }
 
         .container {
-            max-width: 800px;
+            max-width: 1200px;
             margin: auto;
             text-align: center;
         }
@@ -53,25 +30,26 @@
         .image-gallery {
             display: flex;
             align-items: center;
-            justify-content: center; /* Center align buttons */
+            justify-content: center;
+            margin-bottom: 40px;
+            position: relative;
         }
 
         .image-container {
             overflow: hidden;
-            width: 80%; /* Adjust width to fit your layout */
-            position: relative;
+            width: 80%;
         }
 
         .images-wrapper {
             display: flex;
-            transition: transform 0.5s ease; /* Smooth transition */
+            transition: transform 0.5s ease;
         }
 
         .gallery-image {
-            width: calc(33.33% - 10px); /* Adjust for margin */
+            width: 250px;
             height: auto;
-            flex-shrink: 0; /* Prevent images from shrinking */
-            margin: 5px; /* Add space between images */
+            margin: 5px;
+            flex-shrink: 0;
         }
 
         .nav-button {
@@ -80,57 +58,136 @@
             border: none;
             padding: 10px;
             cursor: pointer;
-            transition: background-color 0.3s;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 2;
+        }
+
+        .prevButton {
+            left: 10px;
+        }
+
+        .nextButton {
+            right: 10px;
         }
 
         .nav-button:hover {
             background-color: #0056b3;
         }
-        .gallery-image {
-    width: calc(33.33% - 10px); /* Adjust for margin */
-    height: auto;
-    flex-shrink: 0; /* Prevent images from shrinking */
-    margin: 5px; /* Add space between images */
-}
-
     </style>
+</head>
+<body>
+    <div class="container">
+        <h1 class="main-heading">Image Gallery</h1>
+        <h2 class="sub-heading">Scroll Through Amazing Pictures</h2>
+
+        <!-- Ceiling Image Gallery -->
+        <h3>Ceiling</h3>
+        <div class="image-gallery">
+            <button class="prevButton nav-button">◀</button>
+            <div class="image-container">
+                <div class="images-wrapper">
+                    <img src="images/design-img3.jpg" alt="Image 1" class="gallery-image">
+                    <img src="images/living-room-2155376_1920.jpg" alt="Image 2" class="gallery-image">
+                    <img src="images/design-img3.jpg" alt="Image 3" class="gallery-image">
+                    <img src="images/living-room-2155376_1920.jpg" alt="Image 4" class="gallery-image">
+                </div>
+            </div>
+            <button class="nextButton nav-button">▶</button>
+        </div>
+
+        <!-- Lighting Image Gallery -->
+        <h3>Lighting</h3>
+        <div class="image-gallery">
+            <button class="prevButton nav-button">◀</button>
+            <div class="image-container">
+                <div class="images-wrapper">
+                    <img src="images/design-img3.jpg" alt="Image 5" class="gallery-image">
+                    <img src="images/living-room-2155376_1920.jpg" alt="Image 6" class="gallery-image">
+                    <img src="images/design-img3.jpg" alt="Image 7" class="gallery-image">
+                    <img src="images/living-room-2155376_1920.jpg" alt="Image 8" class="gallery-image">
+                </div>
+            </div>
+            <button class="nextButton nav-button">▶</button>
+        </div>
+
+        <!-- Flooring Image Gallery -->
+        <h3>Flooring</h3>
+        <div class="image-gallery">
+            <button class="prevButton nav-button">◀</button>
+            <div class="image-container">
+                <div class="images-wrapper">
+                    <img src="images/design-img3.jpg" alt="Image 9" class="gallery-image">
+                    <img src="images/living-room-2155376_1920.jpg" alt="Image 10" class="gallery-image">
+                    <img src="images/design-img3.jpg" alt="Image 11" class="gallery-image">
+                    <img src="images/living-room-2155376_1920.jpg" alt="Image 12" class="gallery-image">
+                </div>
+            </div>
+            <button class="nextButton nav-button">▶</button>
+        </div>
+    </div>
+
     <script>
-        const imageContainer = document.getElementById('imageContainer');
-        const imagesWrapper = document.querySelector('.images-wrapper');
-        const images = document.querySelectorAll('.gallery-image');
-        const totalImages = images.length;
-        let currentIndex = 0;
+        // Function to handle gallery scrolling for a specific gallery
+        function initializeGallery(gallery) {
+            const imagesWrapper = gallery.querySelector('.images-wrapper');
+            const images = gallery.querySelectorAll('.gallery-image');
+            const totalImages = images.length;
+            const imageWidth = images[0].offsetWidth + 10; // Include margin between images
+            let currentIndex = 0;
+            let autoScrollInterval;
 
-        // Function to update image display
-        function updateImages() {
-            // Calculate the width of the container
-            const slideWidth = 100 / 3; // 3 images shown at a time
-            imagesWrapper.style.transform = `translateX(-${currentIndex * slideWidth}%)`;
-        }
-
-        // Navigation functions
-        function showNextImages() {
-            currentIndex += 1;
-            if (currentIndex > totalImages - 3) {
-                currentIndex = 0; // Loop back to the beginning
+            // Function to update the position of the image container
+            function updateImages() {
+                imagesWrapper.style.transform = `translateX(-${currentIndex * imageWidth}px)`;
             }
-            updateImages();
-        }
 
-        function showPrevImages() {
-            currentIndex -= 1;
-            if (currentIndex < 0) {
-                currentIndex = totalImages - 3; // Loop back to the end
+            // Handle next button click
+            gallery.querySelector('.nextButton').addEventListener('click', () => {
+                currentIndex += 1;
+                if (currentIndex >= totalImages - 2) { // Adjust for visible images (2 visible)
+                    currentIndex = totalImages - 2;
+                }
+                updateImages();
+            });
+
+            // Handle previous button click
+            gallery.querySelector('.prevButton').addEventListener('click', () => {
+                currentIndex -= 1;
+                if (currentIndex < 0) {
+                    currentIndex = 0;
+                }
+                updateImages();
+            });
+
+            // Auto-scroll function
+            function autoScroll() {
+                currentIndex += 1;
+                if (currentIndex >= totalImages - 2) { // Adjust for visible images
+                    currentIndex = 0; // Start again when reaching the end
+                }
+                updateImages();
             }
-            updateImages();
+
+            // Start auto-scrolling every 3 seconds
+            autoScrollInterval = setInterval(autoScroll, 3000);
+
+            // Pause auto-scrolling on mouse hover
+            gallery.addEventListener('mouseover', () => {
+                clearInterval(autoScrollInterval);
+            });
+
+            // Resume auto-scrolling when mouse leaves
+            gallery.addEventListener('mouseout', () => {
+                autoScrollInterval = setInterval(autoScroll, 3000);
+            });
         }
 
-        // Event listeners for buttons
-        document.getElementById('nextButton').addEventListener('click', showNextImages);
-        document.getElementById('prevButton').addEventListener('click', showPrevImages);
-
-        // Automatic scrolling every 3 seconds
-        setInterval(showNextImages, 3000);
+        // Initialize each gallery on the page
+        document.querySelectorAll('.image-gallery').forEach(gallery => {
+            initializeGallery(gallery);
+        });
     </script>
 </body>
 </html>
