--- a/residential.html
+++ b/residential.html
@@ -210,52 +210,180 @@
         <h2 class="sub-heading text-center mt-3">Residential Services</h2>
 
         <!-- Ceiling Image Gallery -->
-        <h3 class="text-center main-heading">Ceiling</h3>
+        <h3 class="text-center main-heading">Kitchen</h3>
         <div class="image-gallery">
             <button class="prevButton nav-button">◀</button>
             <div class="image-container">
                 <div class="images-wrapper">
-                    <img src="images/design-img3.jpg" alt="Image 1" class="gallery-image">
-                    <img src="images/living-room-2155376_1920.jpg" alt="Image 2" class="gallery-image">
-                    <img src="images/design-img3.jpg" alt="Image 3" class="gallery-image">
-                    <img src="images/living-room-2155376_1920.jpg" alt="Image 4" class="gallery-image">
-                    <img src="images/living-room-2155376_1920.jpg" alt="Image 4" class="gallery-image">
+                    <img src="assets/images/kitchen-services/1.png" alt="Image 1" class="gallery-image">
+                    <img src="assets/images/kitchen-services/2.png" alt="Image 2" class="gallery-image">
+                    <img src="assets/images/kitchen-services/3.png" alt="Image 3" class="gallery-image">
+                    <img src="assets/images/kitchen-services/4.png" alt="Image 4" class="gallery-image">
+                    <img src="assets/images/kitchen-services/5.png" alt="Image 4" class="gallery-image">
+                    <img src="assets/images/kitchen-services/6.png" alt="Image 2" class="gallery-image">
+                    <img src="assets/images/kitchen-services/7.png" alt="Image 3" class="gallery-image">
+                    <img src="assets/images/kitchen-services/8.png" alt="Image 4" class="gallery-image">
+                    <img src="assets/images/kitchen-services/9.png" alt="Image 4" class="gallery-image">
                 </div>
             </div>
             <button class="nextButton nav-button">▶</button>
         </div>
 
         <!-- Lighting Image Gallery -->
-        <h3 class="text-center main-heading">Lighting</h3>
+        <h3 class="text-center main-heading">Wardrobe</h3>
         <div class="image-gallery">
             <button class="prevButton nav-button">◀</button>
             <div class="image-container">
                 <div class="images-wrapper">
-                    <img src="images/design-img3.jpg" alt="Image 5" class="gallery-image">
-                    <img src="images/living-room-2155376_1920.jpg" alt="Image 6" class="gallery-image">
-                    <img src="images/design-img3.jpg" alt="Image 7" class="gallery-image">
-                    <img src="images/living-room-2155376_1920.jpg" alt="Image 8" class="gallery-image">
-                    <img src="images/living-room-2155376_1920.jpg" alt="Image 8" class="gallery-image">
+                    <img src="assets/images/wardrobe/3cc8accb-b555-4944-8db9-5ee0ddc16af1.jpg" alt="Image 5" class="gallery-image">
+                    <img src="assets/images/wardrobe/3e3d4e11-d4fc-4dfe-ae2a-cde3e550d3cd.jpg" alt="Image 6" class="gallery-image">
+                    <img src="assets/images/wardrobe/4fba9d8c-eaa1-42a5-85f3-0531b6898db2.jpg" alt="Image 7" class="gallery-image">
+                    <img src="assets/images/wardrobe/5ea1bcc2-d66e-42ce-8171-a8fc0eef3f5e.jpg" alt="Image 8" class="gallery-image">
+                    <img src="assets/images/wardrobe/6f8b6ad1-427e-4511-bf57-d0eb091dda9e.jpg" alt="Image 8" class="gallery-image">
+                    <img src="assets/images/wardrobe/7aba11fd-e7bf-4379-a23d-71e4f0a41ef1.jpg" alt="Image 5" class="gallery-image">
+                    <img src="assets/images/wardrobe/7e40a188-398d-4908-a13c-164e2f9a7de8.jpg" alt="Image 6" class="gallery-image">
+                    <img src="assets/images/wardrobe/8a3dee61-7bd8-47a7-838d-ad7074227191.jpg" alt="Image 7" class="gallery-image">
+                    <img src="assets/images/wardrobe/8cee4afc-545d-436d-880e-ef9d8e9da41e.jpg" alt="Image 8" class="gallery-image">
+                    <img src="assets/images/wardrobe/83f4f4dd-410f-47b6-bdb1-31cbadf252c1.jpg" alt="Image 8" class="gallery-image">
+                    <img src="assets/images/wardrobe/9426d629-6af5-4018-8177-ccab1de77506.jpg" alt="Image 5" class="gallery-image">
+                    <img src="assets/images/wardrobe/57633d8e-f79d-4862-bfc3-df55e216cfcc.jpg" alt="Image 6" class="gallery-image">
+                    <img src="assets/images/wardrobe/0771377b-98e9-4894-912f-e7c2675fc21c.jpg" alt="Image 7" class="gallery-image">
+                    <img src="assets/images/wardrobe/a73bb51a-54b5-4c21-9ab0-da8b94ac3f08.jpg" alt="Image 8" class="gallery-image">
+                    <img src="assets/images/wardrobe/d17361b2-af96-4d94-89f5-9f2b59e69869.jpg" alt="Image 8" class="gallery-image">
+                    <img src="assets/images/wardrobe/IMG_2212.JPG" alt="Image 5" class="gallery-image">
+                    <img src="assets/images/wardrobe/IMG_3235.jpg" alt="Image 6" class="gallery-image">
+                    <img src="assets/images/wardrobe/IMG_3724.jpg" alt="Image 7" class="gallery-image">
+                    <img src="assets/images/wardrobe/IMG_3729.jpg" alt="Image 8" class="gallery-image">
+                    <img src="assets/images/wardrobe/IMG_3732.jpg" alt="Image 8" class="gallery-image">
                 </div>
             </div>
             <button class="nextButton nav-button">▶</button>
         </div>
 
         <!-- Flooring Image Gallery -->
-        <h3 class="text-center main-heading">Flooring</h3>
+        <h3 class="text-center main-heading">Living Room</h3>
         <div class="image-gallery">
             <button class="prevButton nav-button">◀</button>
             <div class="image-container">
                 <div class="images-wrapper">
-                    <img src="images/design-img3.jpg" alt="Image 9" class="gallery-image">
-                    <img src="images/living-room-2155376_1920.jpg" alt="Image 10" class="gallery-image">
-                    <img src="images/design-img3.jpg" alt="Image 11" class="gallery-image">
-                    <img src="images/living-room-2155376_1920.jpg" alt="Image 12" class="gallery-image">
-                    <img src="images/living-room-2155376_1920.jpg" alt="Image 12" class="gallery-image">
+                    <img src="assets/images/livingroom/IMG_0597.jpg" alt="Image 9" class="gallery-image">
+                    <img src="assets/images/livingroom/fd93ec90-ddc3-4177-941e-9359fb1f8da7.jpg" alt="Image 10" class="gallery-image">
+                    <img src="assets/images/livingroom/f9590f02-ba8f-4db7-9a87-7e6d744da101.jpg" alt="Image 11" class="gallery-image">
+                    <img src="assets/images/livingroom/e1c515ba-7411-426c-aef0-db759ad81fbb.jpg" alt="Image 12" class="gallery-image">
+                    <img src="assets/images/livingroom/c8ee426c-0e7d-4013-8f22-e85d701c50f9.jpg" alt="Image 12" class="gallery-image">
+                    <img src="assets/images/livingroom/b7f2bedc-2f13-4909-9514-b77acba78cb3.jpg" alt="Image 9" class="gallery-image">
+                    <img src="assets/images/livingroom/0508025f-4aa8-4f85-af97-c3a393903683.jpg" alt="Image 10" class="gallery-image">
+                    <img src="assets/images/livingroom/594d3ee1-6cba-43e0-816d-8161ab08b3db.jpg" alt="Image 11" class="gallery-image">
+                    <img src="assets/images/livingroom/99f59dc0-8499-4d70-8cf4-be90e87eeade.jpg" alt="Image 12" class="gallery-image">
+                    <img src="assets/images/livingroom/80baced8-382e-46c2-ac62-4a9b04c03c2e.jpg" alt="Image 12" class="gallery-image">
+
+                    <img src="assets/images/livingroom/074f643c-eb8d-4b4f-a645-a88cbfe92834.jpg" alt="Image 10" class="gallery-image">
+                    <img src="assets/images/livingroom/67dd1a04-682b-4614-a89d-6895c2ec5fe5.jpg" alt="Image 11" class="gallery-image">
+                    <img src="assets/images/livingroom/30f17832-ddf8-4acc-8f0f-70926e8f67d9.jpg" alt="Image 12" class="gallery-image">
+                    <img src="assets/images/livingroom/7ea51aa4-5200-4cab-b5e2-ac81a209891a.jpg" alt="Image 12" class="gallery-image">
+                    <img src="assets/images/livingroom/7b84c5a3-ccd1-4031-b6cc-d788e4da741f.jpg" alt="Image 9" class="gallery-image">
+                    <img src="assets/images/livingroom/6e99db22-5ca3-4a27-9555-2995a03f8bc8.jpg" alt="Image 10" class="gallery-image">
+                    <img src="assets/images/livingroom/5e389605-315f-4cd4-b03e-632327a9131c.jpg" alt="Image 11" class="gallery-image">
+                    <img src="assets/images/livingroom/4ba452eb-9513-4095-aa2c-878abb237952.jpg" alt="Image 12" class="gallery-image">
+                    <img src="assets/images/livingroom/0b3206ed-509c-47f4-b81a-698911059425.jpg" alt="Image 12" class="gallery-image">
                 </div>
             </div>
             <button class="nextButton nav-button">▶</button>
         </div>
+
+
+        <!-- TV UNIT Image Gallery -->
+        <h3 class="text-center main-heading">TV Unit</h3>
+        <div class="image-gallery">
+            <button class="prevButton nav-button">◀</button>
+            <div class="image-container">
+                <div class="images-wrapper">
+                    <img src="assets/images/tvunit/7e1e4aa4-9147-4af7-be5f-debc2f1c66fd.jpg" alt="Image 9" class="gallery-image">
+                    <img src="assets/images/tvunit/9c1c2257-635e-4bf7-95b5-ea6bce379f70.jpg" alt="Image 10" class="gallery-image">
+                    <img src="assets/images/tvunit/26ab1c99-ff85-43aa-844d-112a03b0a72e.jpg" alt="Image 11" class="gallery-image">
+                    <img src="assets/images/tvunit/70cfde77-3631-4711-9b84-b1d1145d1bda.jpg" alt="Image 12" class="gallery-image">
+                    <img src="assets/images/tvunit/91ec7403-3e6a-4691-91f9-202a306a7384.jpg" alt="Image 12" class="gallery-image">
+                    <img src="assets/images/tvunit/116ccde9-0e2e-4596-bbda-8d2a08b9d2a1.jpg" alt="Image 9" class="gallery-image">
+                    <img src="assets/images/tvunit/417ece24-1ce4-41af-a179-97980bbb0c6a.jpg" alt="Image 10" class="gallery-image">
+                    <img src="assets/images/tvunit/544c0e6d-40db-4f5c-b67b-89ca0f78d670.jpg" alt="Image 11" class="gallery-image">
+                    <img src="assets/images/tvunit/19648a1b-311c-4679-88e9-fb98e1d2a02b.jpg" alt="Image 12" class="gallery-image">
+                    <img src="assets/images/tvunit/b6a41d42-554a-4ddd-9609-8465c11f89ce.jpg" alt="Image 12" class="gallery-image">
+                    <img src="assets/images/tvunit/c270bb35-0a6e-4839-8b96-7cdd8a8c5451.jpg" alt="Image 9" class="gallery-image">
+                    <img src="assets/images/tvunit/e03e2699-c2c2-4466-af4d-a01047e4298d.jpg" alt="Image 10" class="gallery-image">
+                    <img src="assets/images/tvunit/e49f4368-a83e-40af-8758-3dbcba3e2a37.jpg" alt="Image 11" class="gallery-image">
+                    <img src="assets/images/tvunit/e8479d8b-7909-423f-ab56-1000c696f65d.jpg" alt="Image 12" class="gallery-image">
+                    <img src="assets/images/tvunit/f82c3101-45f4-4051-be65-276c7e42e897.jpg" alt="Image 12" class="gallery-image">
+                    <img src="assets/images/tvunit/IMG_0603.jpg" alt="Image 12" class="gallery-image">
+                    <img src="assets/images/tvunit/IMG_2064.JPG" alt="Image 12" class="gallery-image">
+                </div>
+            </div>
+            <button class="nextButton nav-button">▶</button>
+        </div>
+
+
+         <!-- pooja kit Image Gallery -->
+         <h3 class="text-center main-heading">Pooja kit</h3>
+         <div class="image-gallery">
+             <button class="prevButton nav-button">◀</button>
+             <div class="image-container">
+                 <div class="images-wrapper">
+                     <img src="images/design-img3.jpg" alt="Image 9" class="gallery-image">
+                     <img src="images/living-room-2155376_1920.jpg" alt="Image 10" class="gallery-image">
+                     <img src="images/design-img3.jpg" alt="Image 11" class="gallery-image">
+                     <img src="images/living-room-2155376_1920.jpg" alt="Image 12" class="gallery-image">
+                     <img src="images/living-room-2155376_1920.jpg" alt="Image 12" class="gallery-image">
+                 </div>
+             </div>
+             <button class="nextButton nav-button">▶</button>
+         </div>
+
+          <!-- Ceiling Image Gallery -->
+          <h3 class="text-center main-heading">Ceiling</h3>
+          <div class="image-gallery">
+              <button class="prevButton nav-button">◀</button>
+              <div class="image-container">
+                  <div class="images-wrapper">
+                      <img src="images/design-img3.jpg" alt="Image 9" class="gallery-image">
+                      <img src="images/living-room-2155376_1920.jpg" alt="Image 10" class="gallery-image">
+                      <img src="images/design-img3.jpg" alt="Image 11" class="gallery-image">
+                      <img src="images/living-room-2155376_1920.jpg" alt="Image 12" class="gallery-image">
+                      <img src="images/living-room-2155376_1920.jpg" alt="Image 12" class="gallery-image">
+                  </div>
+              </div>
+              <button class="nextButton nav-button">▶</button>
+          </div>
+
+           <!-- lighting Image Gallery -->
+         <h3 class="text-center main-heading">Lighting</h3>
+         <div class="image-gallery">
+             <button class="prevButton nav-button">◀</button>
+             <div class="image-container">
+                 <div class="images-wrapper">
+                     <img src="images/design-img3.jpg" alt="Image 9" class="gallery-image">
+                     <img src="images/living-room-2155376_1920.jpg" alt="Image 10" class="gallery-image">
+                     <img src="images/design-img3.jpg" alt="Image 11" class="gallery-image">
+                     <img src="images/living-room-2155376_1920.jpg" alt="Image 12" class="gallery-image">
+                     <img src="images/living-room-2155376_1920.jpg" alt="Image 12" class="gallery-image">
+                 </div>
+             </div>
+             <button class="nextButton nav-button">▶</button>
+         </div>
+
+          <!-- pooja kit Image Gallery -->
+          <h3 class="text-center main-heading">Home Theater</h3>
+          <div class="image-gallery">
+              <button class="prevButton nav-button">◀</button>
+              <div class="image-container">
+                  <div class="images-wrapper">
+                      <img src="images/design-img3.jpg" alt="Image 9" class="gallery-image">
+                      <img src="images/living-room-2155376_1920.jpg" alt="Image 10" class="gallery-image">
+                      <img src="images/design-img3.jpg" alt="Image 11" class="gallery-image">
+                      <img src="images/living-room-2155376_1920.jpg" alt="Image 12" class="gallery-image">
+                      <img src="images/living-room-2155376_1920.jpg" alt="Image 12" class="gallery-image">
+                  </div>
+              </div>
+              <button class="nextButton nav-button">▶</button>
+          </div>
     </div>
 
     
