--- a/n.html
+++ b/n.html
@@ -1,28 +1,25 @@
 <div class="container">
-    <div class="left">
-      <h2>Section Heading</h2>
-      <p>This is a sample paragraph text describing the section.</p>
+    <div class="text-column">
+      <h2>Heading</h2>
+      <p>This is the paragraph on the left side. You can add more text here as needed.</p>
     </div>
-  
-    <div class="right">
-      <div class="column" id="column-1">
-        <img src="images/sdfb.png" alt="Image 1">
-        <img src="images/sdfb.png" alt="Image 2">
-        <img src="images/sdfb.png" alt="Image 3">
-        <img src="images/sdfb.png" alt="Image 4">
-        <img src="images/sdfb.png" alt="Image 5">
+    <div class="image-columns">
+      <div class="image-column scroll-up">
+        <img src="images/service-one_bg.jpg" alt="Image 1">
+        <img src="images/service-one_bg.jpg" alt="Image 2">
+        <img src="images/service-one_bg.jpg" alt="Image 3">
+        <img src="images/service-one_bg.jpg" alt="Image 4">
+        <img src="images/service-one_bg.jpg" alt="Image 5">
       </div>
-  
-      <div class="column" id="column-2">
-        <img src="images/sdfb.png" alt="Image 6">
-        <img src="images/sdfb.png" alt="Image 7">
-        <img src="images/sdfb.png" alt="Image 8">
-        <img src="images/sdfb.png" alt="Image 9">
-        <img src="images/sdfb.png" alt="Image 10">
+      <div class="image-column scroll-down">
+        <img src="images/topbanner.jpg" alt="Image 6">
+        <img src="images/topbanner.jpg" alt="Image 7">
+        <img src="images/topbanner.jpg" alt="Image 8">
+        <img src="images/topbanner.jpg" alt="Image 9">
+        <img src="images/topbanner.jpg" alt="Image 10">
       </div>
     </div>
   </div>
-  
 
   <style>
     .container {
@@ -30,48 +27,56 @@
   justify-content: space-between;
 }
 
-.left {
-  flex: 1;
-  margin-right: 20px;
+.text-column {
+  width: 40%;
+  padding: 20px;
 }
 
-.right {
+.image-columns {
   display: flex;
-  flex: 1;
+  width: 50%;
   justify-content: space-between;
 }
 
-.column {
+.image-column {
   width: 45%;
   display: flex;
   flex-direction: column;
-  padding: 10px;
   overflow: hidden;
-  height: 300px; /* Adjust based on your requirement */
+  height: 300px;
+  position: relative;
 }
 
-.column img {
-  margin: 10px 0;
+.image-column img {
   width: 100%;
-  padding: 5px; /* Padding between images */
+  height: auto;
+  margin-bottom: 10px;
 }
 
-#column-1 {
-  animation: scrollTopToBottom 10s linear infinite;
+.scroll-up {
+  animation: scrollUp 10s linear infinite;
 }
 
-#column-2 {
-  animation: scrollBottomToTop 10s linear infinite;
+.scroll-down {
+  animation: scrollDown 10s linear infinite;
 }
 
-@keyframes scrollTopToBottom {
-  0% { transform: translateY(-100%); }
-  100% { transform: translateY(100%); }
+@keyframes scrollUp {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
 }
 
-@keyframes scrollBottomToTop {
-  0% { transform: translateY(100%); }
-  100% { transform: translateY(-100%); }
+@keyframes scrollDown {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(100%);
+  }
 }
 
   </style>
