--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       <ul class="navbar-nav ml-auto mt-lg-0">
         <!-- Home Link -->
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link active" href="index.html">Home</a>
         </li>
 
         <!-- About Link -->
@@ -172,21 +172,18 @@
             Services
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="turnkey-projects.html">Turnkey Projects</a>
-            <a class="dropdown-item" href="design-consultation.html">Design Consultation</a>
-            <a class="dropdown-item" href="spatial-design.html">Spatial Design</a>
-            <a class="dropdown-item" href="lighting-consultation.html">Lighting Consultation</a>
-            <a class="dropdown-item" href="modular-solutions.html">Modular Solutions</a>
-            <a class="dropdown-item" href="revamping.html">Revamping</a>
+            <a class="dropdown-item" href="residential-services.html">Residential</a>
+            <a class="dropdown-item" href="commercial-services.html">Commercial</a>
+            <a class="dropdown-item" href="renovation-services.html">Renovation</a>
           </div>
         </li>
 
         <!-- Projects Link -->
         <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Projects</a>
+          <a class="nav-link" href="project.html">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Packages</a>
+          <a class="nav-link" href="packages.html">Packages</a>
         </li>
 
         <!-- Contact Link -->
