--- a/index.html
+++ b/index.html
@@ -910,10 +910,10 @@
             <div class="row">
           <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
             <div class="footer-logo">
-              <a href="index.html"><img src="assets/images/logo/logo.webp" /></a>
+              <a href="index.html"><img src="assets/images/logo/3.png" /></a>
             </div>
             <p class="footer-txt">
-              Here at La’espace, we create spaces that evoke magic through the use of color, pattern, and storytelling.  Our approach is collaborative and hands-on, we listen and love to create a space that truly reflects your life and lifestyle.
+              Here at SR, we create spaces that evoke magic through the use of color, pattern, and storytelling.  Our approach is collaborative and hands-on, we listen and love to create a space that truly reflects your life and lifestyle.
             </p>
 
           </div>
@@ -999,8 +999,8 @@
                 <i class="bi bi-geo-alt me-2"></i><b class="company-name-heading"></b>H No 1-65/S/469, Guttala Begumpet, Jubilee Hills, Hyderabad, TELANGANA - 500081
               </li>
               <li>
-                <a href="mailto:projects@laespace.com"
-                  ><i class="bi bi-envelope me-2"></i>projects@laespace.com</a
+                <a href="mailto:projects@sr.com"
+                  ><i class="bi bi-envelope me-2"></i>projects@sr.com</a
                 >
               </li>
               <li>
@@ -1009,10 +1009,10 @@
               </li>
             </ul>
             <div class="social">
-              <a href="https://www.facebook.com/laespacedesignstudio?mibextid=kFxxJD" target="_b"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.facebook.com/srdesignstudio?mibextid=kFxxJD" target="_b"><i class="bi bi-facebook"></i></a>
               <!-- <a href="#"><i class="bi bi-twitter"></i></a>
               <a href="#"><i class="bi bi-linkedin"></i></a> -->
-              <a href="https://www.instagram.com/studiolaespace/?fbclid=IwAR1Z0oQfiFNVHoCtUgxBlQmEa7Dz3uW1ffcGmXIPwkrE9noH_6YzKQxozXY" target="_b"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.instagram.com/studiosr/?fbclid=IwAR1Z0oQfiFNVHoCtUgxBlQmEa7Dz3uW1ffcGmXIPwkrE9noH_6YzKQxozXY" target="_b"><i class="bi bi-instagram"></i></a>
             </div>
           </div>
         </div>  </div>
