--- a/commercial-services.html
+++ b/commercial-services.html
@@ -2489,6 +2489,104 @@
       </div>
     </section><!-- End Portfolio Section -->
 
+    <!-- Portfolio Section -->
+<section class="portfolio section">
+  <!-- Section Title -->
+  <div class="container package-title mt-4">
+    <span>Interior Packages</span>
+    <h2>Explore Our Interior Packages</h2>
+    <p>Discover our range of interior packages designed for different types of homes.</p>
+  </div><!-- End Section Title -->
+
+  <div class="container">
+    <ul class="nav nav-tabs" id="packageTabs" role="tablist">
+      <li class="nav-item pr-3">
+        <a class="nav-link active" id="2BHK-tab" data-toggle="tab" href="#tab-2BHK" role="tab"
+          aria-controls="tab-2BHK" aria-selected="true">2BHK Packages</a>
+      </li>
+      <li class="nav-item pr-3">
+        <a class="nav-link" id="3BHK-tab" data-toggle="tab" href="#tab-3BHK" role="tab"
+          aria-controls="tab-3BHK" aria-selected="false">3BHK Packages</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="villa-tab" data-toggle="tab" href="#tab-villa" role="tab"
+          aria-controls="tab-villa" aria-selected="false">Villa/Home Packages</a>
+      </li>
+    </ul>
+
+    <div class="tab-content" id="packageTabsContent">
+      <!-- 2BHK Tab Pane -->
+      <div class="tab-pane fade show active" id="tab-2BHK" role="tabpanel" aria-labelledby="2BHK-tab">
+        <div class="container">
+          <div class="row">
+            <!-- 2BHK Package Cards -->
+            <div class="col-lg-4 mb-4 packbud">
+              <div class="package-card">
+                <!-- Content for 2BHK Budget Friendly -->
+                <div class="package-card-body">
+                  <!-- Add your content here -->
+                  <h3>Budget Friendly Package</h3>
+                  <!-- Other contents like images and descriptions... -->
+                  <div class="text-center">
+                    <a href="contact.html" class="buy-btn text-center">Get Package Offers</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Add more cards as needed for 2BHK -->
+          </div>
+        </div>
+      </div>
+
+      <!-- 3BHK Tab Pane -->
+      <div class="tab-pane fade" id="tab-3BHK" role="tabpanel" aria-labelledby="3BHK-tab">
+        <div class="container">
+          <div class="row">
+            <!-- 3BHK Package Cards -->
+            <div class="col-lg-4 mb-4 packbud">
+              <div class="package-card">
+                <!-- Content for 3BHK -->
+                <div class="package-card-body">
+                  <h3>Value for Money Package</h3>
+                  <!-- Other contents like images and descriptions... -->
+                  <div class="text-center">
+                    <a href="contact.html" class="buy-btn text-center">Get Package Offers</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Add more cards as needed for 3BHK -->
+          </div>
+        </div>
+      </div>
+
+      <!-- Villa/Home Tab Pane -->
+      <div class="tab-pane fade" id="tab-villa" role="tabpanel" aria-labelledby="villa-tab">
+        <div class="container">
+          <div class="row">
+            <!-- Villa Package Cards -->
+            <div class="col-lg-4 mb-4 packbud">
+              <div class="package-card">
+                <!-- Content for Villa/Home -->
+                <div class="package-card-body">
+                  <h3>Luxury Villa Package</h3>
+                  <!-- Other contents like images and descriptions... -->
+                  <div class="text-center">
+                    <a href="contact.html" class="buy-btn text-center">Get Package Offers</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Add more cards as needed for Villa/Home -->
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
     
 
     
