--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
       <ul class="navbar-nav ml-auto mt-lg-0">
         <!-- Home Link -->
         <li class="nav-item">
-          <a class="nav-link active" href="index.html">Home</a>
+          <a class="nav-link " href="index.html">Home</a>
         </li>
 
         <!-- About Link -->
