--- a/index.html
+++ b/index.html
@@ -1018,11 +1018,11 @@
         </div>  </div>
         <div class="row copyright">
           <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12">
-            © 2024 La'espace Design Studio. All rights reserved. Designed by:
-            <a href="https://www.pcmedia.in/" target="_blank">PENCAP MEDIA</a>
+            © 2024 SR INteriors. All rights reserved. Designed by:
+            <a href="https://www.thepatternscompany.com" target="_blank">The Patterns Company</a>
           </div>
           <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
-            <a href="terms-and-conditions.html"
+            <a href="#"
                 >Terms and conditions</a
               > &nbsp; | &nbsp;<a href="privacy-policy.html"
                 >Privacy Policy</a
@@ -1030,7 +1030,9 @@
           </div>
         </div>
     
-    </footer>    </main>
+    </footer>    
+  
+  </main>
 
     
 
