--- a/about.html
+++ b/about.html
@@ -180,7 +180,7 @@
       <section class="breadcrumb-section">
         <img src="assets/images/3d/b34.webp" class="breadcrumb-section-img" />
         <div class="bread-txt">
-          <h1>Contact Us</h1>
+          <h1>About Us</h1>
         </div>
         <div class="breadcrumb-content">
           <div aria-label="breadcrumb" class="bread">
