--- a/packages.html
+++ b/packages.html
@@ -170,7 +170,7 @@
 
         <!-- Contact Link -->
         <li class="nav-item">
-          <a class="nav-link active" href="contact.html">Contact</a>
+          <a class="nav-link " href="contact.html">Contact</a>
         </li>
       </ul>
     </div>
