--- a/residential-services.html
+++ b/residential-services.html
@@ -235,10 +235,11 @@
         }
 
         .gallery-image {
-            width: 260px;
+            width: 300px;
             height: auto;
             margin: 5px;
             flex-shrink: 0;
+            border-radius: 20px;
         }
 
         .nav-button {
