--- a/about.html
+++ b/about.html
@@ -203,10 +203,10 @@
               <div class="about-img-box">
                 <img src="images/abo2.png" class="about-img-box-main-img">
                 <div class="about-section-card">
-                  <div class="about-section-card-txt">
+                  <!-- <div class="about-section-card-txt">
                     <h3>12</h3>
                     <h5>Years Experience</h5>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
