--- a/packages.html
+++ b/packages.html
@@ -178,10 +178,11 @@
 </nav>
 
 
+
       <section class="breadcrumb-section">
         <img src="assets/images/3d/b34.webp" class="breadcrumb-section-img" />
         <div class="bread-txt">
-          <h1>Contact Us</h1>
+          <h1>Packages</h1>
         </div>
         <div class="breadcrumb-content">
           <div aria-label="breadcrumb" class="bread">
@@ -198,7 +199,7 @@
 
       <!-- Section Title -->
 <div class="container package-title mt-4 text-center">
-  <span class="text-center">Interior Packages</span>
+
   <h2 class="text-center">Explore Our Interior Packages</h2>
   <p class="text-center">Discover our range of interior packages designed for different types of homes.</p>
 </div>
