--- a/project.html
+++ b/project.html
@@ -180,7 +180,13 @@
       </div>
     </nav>
 
-    
+    <section class="breadcrumb-section">
+      <img src="assets/images/3d/b34.webp" class="breadcrumb-section-img" />
+      <div class="bread-txt">
+        <h1>Projects</h1>
+      </div>
+     
+    </section>
 
       <h1 class="text-center main-heading">Residential</h1>
 
